test/files/neg/import-future.check
import-future.scala:15: error: not found: value unrelated
    unrelated(1) // error
    ^
import-future.scala:40: error: not found: value f
  def g = f[Int] // error no f, was given is not a member
          ^
2 errors
